--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7",
-    "husky": "^7.0.4",
     "jquery": "3.5",
     "lodash": "~4.17.21",
     "luxon": "~2.2.0",
@@ -66,6 +65,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-rxjs": "^5.0.1",
+    "husky": "^7.0.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
@@ -83,8 +84,7 @@
     "stylelint-scss": "3.18",
     "ts-node": "~8.3.0",
     "typescript": "~4.5.4",
-    "webpack-bundle-analyzer": "3.3.2",
-    "husky": "^7.0.0"
+    "webpack-bundle-analyzer": "3.3.2"
   },
   "lint-staged": {
     "*.{scss, css}": "stylelint --fix",
