--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/cdk": "~13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/localize": "~13.1.0",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
-    "@ng-select/ng-select": "~8.1.1",
+    "@angular/animations": "^14.2.1",
+    "@angular/cdk": "^14.2.1",
+    "@angular/common": "^14.2.1",
+    "@angular/compiler": "^14.2.1",
+    "@angular/core": "^14.2.1",
+    "@angular/forms": "^14.2.1",
+    "@angular/localize": "^14.2.1",
+    "@angular/platform-browser": "^14.2.1",
+    "@angular/platform-browser-dynamic": "^14.2.1",
+    "@angular/router": "^14.2.1",
+    "@ng-select/ng-select": "~9.0.2",
     "@ngneat/until-destroy": "~9.0.0",
     "bootstrap": "4.6.1",
     "font-awesome": "4.7",
     "lodash": "~4.17.21",
     "luxon": "~2.2.0",
-    "ngx-bootstrap": "~8.0.0",
+    "ngx-bootstrap": "~9.0.0",
     "roboto-fontface": "0.10",
     "rxjs": "^7.4.0",
     "socket.io-client": "^2.2.0",
@@ -42,8 +42,8 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.4",
-    "@angular/cli": "~13.1.1",
+    "@angular-devkit/build-angular": "14.2.2",
+    "@angular/cli": "14.2.2",
     "@types/jasmine": "~3.10.0",
     "@types/lodash": "4.14",
     "@types/luxon": "^1.27.1",
@@ -73,7 +73,7 @@
     "stylelint-prettier": "1.1",
     "stylelint-scss": "3.18",
     "ts-node": "~8.3.0",
-    "typescript": "~4.5.4",
+    "typescript": "~4.8.3",
     "webpack-bundle-analyzer": "4.5.0"
   },
   "lint-staged": {
