--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "14.2.2",
+    "@angular-eslint/builder": "^14.0.4",
+    "@angular-eslint/eslint-plugin": "^14.0.4",
+    "@angular-eslint/eslint-plugin-template": "^14.0.4",
+    "@angular-eslint/template-parser": "^14.0.4",
     "@angular/cli": "14.2.2",
     "@types/jasmine": "~3.10.0",
     "@types/lodash": "4.14",
